--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="google-site-verification" content="GsE8cIrLEwcXqHfwjWXW76lcIxyJftR0IEzmAJ2YPpo" />
 
     <title>Alltecure</title>
 
@@ -992,5 +993,6 @@
 
 
 </html>
+
 
 
