--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3Y1EQCEHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q3Y1EQCEHR');
+</script>
+    
 </head>
 
 <body>
@@ -992,6 +1004,7 @@
 
 
 </html>
+
 
 
 
